chore: add GH_TOKEN to build environment and update product name to 'Logos'

--- a/.github/workflows/Check.yml
+++ b/.github/workflows/Check.yml
@@ -61,6 +61,7 @@ jobs:
       - name: Build (vite + electron-builder)
         env:
           CI: true
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: npm run build
 
       - name: Upload release artifacts
