--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -391,6 +391,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
+          ref: main
           fetch-depth: 0
 
       - name: Update README download links
