--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Logos",
-  "version": "2026.5.0",
+  "version": "2026.5.1",
   "description": "Logos - A Modern, Lightweight Code Editor",
   "author": {
     "name": "Zixiao System",
@@ -39,6 +39,7 @@
     "@xterm/addon-web-links": "^0.10.0",
     "@xterm/xterm": "^5.4.0",
     "axios": "^1.6.8",
+    "adm-zip": "^0.5.16",
     "electron-log": "^5.4.3",
     "electron-updater": "^6.7.3",
     "mdui": "^2.0.0",
