--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Logos",
-  "version": "2026.5.1",
+  "version": "2026.5.2",
   "description": "Logos - A Modern, Lightweight Code Editor",
   "author": {
     "name": "Zixiao System",
@@ -21,7 +21,7 @@
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
-    "postinstall": "electron-rebuild -f -w node-pty"
+    "postinstall": "electron-rebuild -f -w node-pty && patch-package"
   },
   "keywords": [
     "ide",
@@ -38,8 +38,8 @@
     "@xterm/addon-fit": "^0.9.0",
     "@xterm/addon-web-links": "^0.10.0",
     "@xterm/xterm": "^5.4.0",
-    "axios": "^1.6.8",
     "adm-zip": "^0.5.16",
+    "axios": "^1.6.8",
     "electron-log": "^5.4.3",
     "electron-updater": "^6.7.3",
     "mdui": "^2.0.0",
@@ -75,6 +75,7 @@
     "eslint-plugin-vue": "^9.33.0",
     "globals": "^16.5.0",
     "happy-dom": "^20.3.3",
+    "patch-package": "^8.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3",
     "typescript-eslint": "^8.50.1",
