--- a/.github/workflows/UpdateVscodeVendor.yml
+++ b/.github/workflows/UpdateVscodeVendor.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Install VS Code build deps
         run: |
           sudo apt-get update
-          sudo apt-get install -y libkrb5-dev
+          sudo apt-get install -y libkrb5-dev libx11-dev libxkbfile-dev pkg-config
 
       - name: Sync VS Code vendor
         run: ./update.sh --source ./vscode-src --build
